Assignment 1/ulParser.java
// $ANTLR 3.0.1 ul.g 2018-01-20 14:33:29

    import ast.*;
    import type.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class ulParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "OPENPARENTHESIS", "CLOSEPARENTHESIS", "COMMA", "OPENBRACE", "CLOSEBRACE", "SEMICOLON", "TYPE", "OPENBRACKET", "INTEGERCONSTANT", "CLOSEBRACKET", "SINGLEEQUALS", "WHILE", "RETURN", "PRINT", "PRINTLN", "IF", "ELSE", "STAR", "PLUS", "MINUS", "LESSTHAN", "DOUBLEEQUALS", "ID", "FLOATCONSTANT", "CHARACTERCONSTANT", "STRINGCONSTANT", "TRUE", "FALSE", "WHITESPACE", "COMMENT"
    };
    public static final int PRINT=17;
    public static final int PRINTLN=18;
    public static final int CLOSEBRACE=8;
    public static final int COMMENT=33;
    public static final int MINUS=23;
    public static final int RETURN=16;
    public static final int SEMICOLON=9;
    public static final int WHITESPACE=32;
    public static final int STRINGCONSTANT=29;
    public static final int ELSE=20;
    public static final int CLOSEBRACKET=13;
    public static final int ID=26;
    public static final int EOF=-1;
    public static final int TYPE=10;
    public static final int IF=19;
    public static final int DOUBLEEQUALS=25;
    public static final int COMMA=6;
    public static final int CHARACTERCONSTANT=28;
    public static final int OPENBRACE=7;
    public static final int OPENPARENTHESIS=4;
    public static final int TRUE=30;
    public static final int SINGLEEQUALS=14;
    public static final int FLOATCONSTANT=27;
    public static final int OPENBRACKET=11;
    public static final int CLOSEPARENTHESIS=5;
    public static final int INTEGERCONSTANT=12;
    public static final int STAR=21;
    public static final int LESSTHAN=24;
    public static final int WHILE=15;
    public static final int FALSE=31;
    public static final int PLUS=22;

        public ulParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[69+1];
         }
        

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "ul.g"; }


        protected void mismatch(IntStream input, int ttype, BitSet follow) throws RecognitionException {
            throw new MismatchedTokenException(ttype, input);
        }

        public void recoverFromMismatchedSet(IntStream input, RecognitionException re, BitSet follow) throws RecognitionException {
            reportError(re);
            throw re;
        }



    // $ANTLR start program
    // ul.g:31:1: program returns [Program p] : (f= function )+ EOF ;
    public final Program program() throws RecognitionException {
        Program p = null;

        Function f = null;



            p = new Program();

        try {
            // ul.g:36:5: ( (f= function )+ EOF )
            // ul.g:36:7: (f= function )+ EOF
            {
            // ul.g:36:7: (f= function )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==TYPE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ul.g:36:8: f= function
            	    {
            	    pushFollow(FOLLOW_function_in_program60);
            	    f=function();
            	    _fsp--;
            	    if (failed) return p;
            	    if ( backtracking==0 ) {
            	       p.addElement(f); 
            	    }

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (backtracking>0) {failed=true; return p;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            match(input,EOF,FOLLOW_EOF_in_program66); if (failed) return p;

            }

        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return p;
    }
    // $ANTLR end program


    // $ANTLR start function
    // ul.g:39:1: function returns [Function f] : fd= functionDeclaration fb= functionBody ;
    public final Function function() throws RecognitionException {
        Function f = null;

        FunctionDeclaration fd = null;

        FunctionBody fb = null;


        try {
            // ul.g:40:5: (fd= functionDeclaration fb= functionBody )
            // ul.g:40:10: fd= functionDeclaration fb= functionBody
            {
            pushFollow(FOLLOW_functionDeclaration_in_function94);
            fd=functionDeclaration();
            _fsp--;
            if (failed) return f;
            pushFollow(FOLLOW_functionBody_in_function100);
            fb=functionBody();
            _fsp--;
            if (failed) return f;
            if ( backtracking==0 ) {
               f = new Function(fd, fb); 
            }

            }

        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return f;
    }
    // $ANTLR end function


    // $ANTLR start functionDeclaration
    // ul.g:44:1: functionDeclaration returns [FunctionDeclaration fd] : type= compoundType name= identifier OPENPARENTHESIS args= formalParameters CLOSEPARENTHESIS ;
    public final FunctionDeclaration functionDeclaration() throws RecognitionException {
        FunctionDeclaration fd = null;

        TypeNode type = null;

        Identifier name = null;

        FormalParameters args = null;


        try {
            // ul.g:45:5: (type= compoundType name= identifier OPENPARENTHESIS args= formalParameters CLOSEPARENTHESIS )
            // ul.g:45:10: type= compoundType name= identifier OPENPARENTHESIS args= formalParameters CLOSEPARENTHESIS
            {
            pushFollow(FOLLOW_compoundType_in_functionDeclaration134);
            type=compoundType();
            _fsp--;
            if (failed) return fd;
            pushFollow(FOLLOW_identifier_in_functionDeclaration140);
            name=identifier();
            _fsp--;
            if (failed) return fd;
            match(input,OPENPARENTHESIS,FOLLOW_OPENPARENTHESIS_in_functionDeclaration142); if (failed) return fd;
            pushFollow(FOLLOW_formalParameters_in_functionDeclaration148);
            args=formalParameters();
            _fsp--;
            if (failed) return fd;
            match(input,CLOSEPARENTHESIS,FOLLOW_CLOSEPARENTHESIS_in_functionDeclaration150); if (failed) return fd;
            if ( backtracking==0 ) {
               fd = new FunctionDeclaration(type, name, args); 
            }

            }

        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return fd;
    }
    // $ANTLR end functionDeclaration


    // $ANTLR start formalParameters
    // ul.g:49:1: formalParameters returns [FormalParameters args] : ( compoundType identifier ( COMMA compoundType identifier )* | );
    public final FormalParameters formalParameters() throws RecognitionException {
        FormalParameters args = null;

        try {
            // ul.g:50:5: ( compoundType identifier ( COMMA compoundType identifier )* | )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==TYPE) ) {
                alt3=1;
            }
            else if ( (LA3_0==CLOSEPARENTHESIS) ) {
                alt3=2;
            }
            else {
                if (backtracking>0) {failed=true; return args;}
                NoViableAltException nvae =
                    new NoViableAltException("49:1: formalParameters returns [FormalParameters args] : ( compoundType identifier ( COMMA compoundType identifier )* | );", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // ul.g:50:10: compoundType identifier ( COMMA compoundType identifier )*
                    {
                    pushFollow(FOLLOW_compoundType_in_formalParameters180);
                    compoundType();
                    _fsp--;
                    if (failed) return args;
                    pushFollow(FOLLOW_identifier_in_formalParameters182);
                    identifier();
                    _fsp--;
                    if (failed) return args;
                    // ul.g:50:34: ( COMMA compoundType identifier )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==COMMA) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // ul.g:50:35: COMMA compoundType identifier
                    	    {
                    	    match(input,COMMA,FOLLOW_COMMA_in_formalParameters185); if (failed) return args;
                    	    pushFollow(FOLLOW_compoundType_in_formalParameters187);
                    	    compoundType();
                    	    _fsp--;
                    	    if (failed) return args;
                    	    pushFollow(FOLLOW_identifier_in_formalParameters189);
                    	    identifier();
                    	    _fsp--;
                    	    if (failed) return args;

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // ul.g:52:5: 
                    {
                    }
                    break;

            }
        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return args;
    }
    // $ANTLR end formalParameters


    // $ANTLR start functionBody
    // ul.g:54:1: functionBody returns [FunctionBody fb] : OPENBRACE ( variableDeclaration )* ( statement )* CLOSEBRACE ;
    public final FunctionBody functionBody() throws RecognitionException {
        FunctionBody fb = null;

        try {
            // ul.g:55:5: ( OPENBRACE ( variableDeclaration )* ( statement )* CLOSEBRACE )
            // ul.g:55:10: OPENBRACE ( variableDeclaration )* ( statement )* CLOSEBRACE
            {
            match(input,OPENBRACE,FOLLOW_OPENBRACE_in_functionBody221); if (failed) return fb;
            // ul.g:55:20: ( variableDeclaration )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==TYPE) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // ul.g:0:0: variableDeclaration
            	    {
            	    pushFollow(FOLLOW_variableDeclaration_in_functionBody223);
            	    variableDeclaration();
            	    _fsp--;
            	    if (failed) return fb;

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            // ul.g:55:41: ( statement )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==OPENPARENTHESIS||LA5_0==SEMICOLON||LA5_0==INTEGERCONSTANT||(LA5_0>=WHILE && LA5_0<=IF)||(LA5_0>=ID && LA5_0<=FALSE)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // ul.g:0:0: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_functionBody226);
            	    statement();
            	    _fsp--;
            	    if (failed) return fb;

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            match(input,CLOSEBRACE,FOLLOW_CLOSEBRACE_in_functionBody229); if (failed) return fb;

            }

        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return fb;
    }
    // $ANTLR end functionBody


    // $ANTLR start variableDeclaration
    // ul.g:58:1: variableDeclaration : compoundType identifier SEMICOLON ;
    public final void variableDeclaration() throws RecognitionException {
        try {
            // ul.g:59:5: ( compoundType identifier SEMICOLON )
            // ul.g:59:7: compoundType identifier SEMICOLON
            {
            pushFollow(FOLLOW_compoundType_in_variableDeclaration246);
            compoundType();
            _fsp--;
            if (failed) return ;
            pushFollow(FOLLOW_identifier_in_variableDeclaration248);
            identifier();
            _fsp--;
            if (failed) return ;
            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_variableDeclaration250); if (failed) return ;

            }

        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return ;
    }
    // $ANTLR end variableDeclaration


    // $ANTLR start compoundType
    // ul.g:62:1: compoundType returns [TypeNode type] : ( TYPE | TYPE OPENBRACKET INTEGERCONSTANT CLOSEBRACKET );
    public final TypeNode compoundType() throws RecognitionException {
        TypeNode type = null;

        try {
            // ul.g:63:5: ( TYPE | TYPE OPENBRACKET INTEGERCONSTANT CLOSEBRACKET )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==TYPE) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==OPENBRACKET) ) {
                    alt6=2;
                }
                else if ( (LA6_1==ID) ) {
                    alt6=1;
                }
                else {
                    if (backtracking>0) {failed=true; return type;}
                    NoViableAltException nvae =
                        new NoViableAltException("62:1: compoundType returns [TypeNode type] : ( TYPE | TYPE OPENBRACKET INTEGERCONSTANT CLOSEBRACKET );", 6, 1, input);

                    throw nvae;
                }
            }
            else {
                if (backtracking>0) {failed=true; return type;}
                NoViableAltException nvae =
                    new NoViableAltException("62:1: compoundType returns [TypeNode type] : ( TYPE | TYPE OPENBRACKET INTEGERCONSTANT CLOSEBRACKET );", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // ul.g:63:10: TYPE
                    {
                    match(input,TYPE,FOLLOW_TYPE_in_compoundType274); if (failed) return type;

                    }
                    break;
                case 2 :
                    // ul.g:64:10: TYPE OPENBRACKET INTEGERCONSTANT CLOSEBRACKET
                    {
                    match(input,TYPE,FOLLOW_TYPE_in_compoundType285); if (failed) return type;
                    match(input,OPENBRACKET,FOLLOW_OPENBRACKET_in_compoundType287); if (failed) return type;
                    match(input,INTEGERCONSTANT,FOLLOW_INTEGERCONSTANT_in_compoundType289); if (failed) return type;
                    match(input,CLOSEBRACKET,FOLLOW_CLOSEBRACKET_in_compoundType291); if (failed) return type;

                    }
                    break;

            }
        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return type;
    }
    // $ANTLR end compoundType


    // $ANTLR start statement
    // ul.g:67:1: statement : ( SEMICOLON | expressionStatement | assignmentStatement | arrayAssignmentStatement | whileStatement | returnStatement | printStatement | printlnStatement | ifElseStatement | ifStatement );
    public final void statement() throws RecognitionException {
        try {
            // ul.g:68:5: ( SEMICOLON | expressionStatement | assignmentStatement | arrayAssignmentStatement | whileStatement | returnStatement | printStatement | printlnStatement | ifElseStatement | ifStatement )
            int alt7=10;
            switch ( input.LA(1) ) {
            case SEMICOLON:
                {
                alt7=1;
                }
                break;
            case ID:
                {
                int LA7_2 = input.LA(2);

                if ( (synpred8()) ) {
                    alt7=2;
                }
                else if ( (synpred9()) ) {
                    alt7=3;
                }
                else if ( (synpred10()) ) {
                    alt7=4;
                }
                else {
                    if (backtracking>0) {failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("67:1: statement : ( SEMICOLON | expressionStatement | assignmentStatement | arrayAssignmentStatement | whileStatement | returnStatement | printStatement | printlnStatement | ifElseStatement | ifStatement );", 7, 2, input);

                    throw nvae;
                }
                }
                break;
            case OPENPARENTHESIS:
            case INTEGERCONSTANT:
            case FLOATCONSTANT:
            case CHARACTERCONSTANT:
            case STRINGCONSTANT:
            case TRUE:
            case FALSE:
                {
                alt7=2;
                }
                break;
            case WHILE:
                {
                alt7=5;
                }
                break;
            case RETURN:
                {
                alt7=6;
                }
                break;
            case PRINT:
                {
                alt7=7;
                }
                break;
            case PRINTLN:
                {
                alt7=8;
                }
                break;
            case IF:
                {
                int LA7_13 = input.LA(2);

                if ( (synpred15()) ) {
                    alt7=9;
                }
                else if ( (true) ) {
                    alt7=10;
                }
                else {
                    if (backtracking>0) {failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("67:1: statement : ( SEMICOLON | expressionStatement | assignmentStatement | arrayAssignmentStatement | whileStatement | returnStatement | printStatement | printlnStatement | ifElseStatement | ifStatement );", 7, 13, input);

                    throw nvae;
                }
                }
                break;
            default:
                if (backtracking>0) {failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("67:1: statement : ( SEMICOLON | expressionStatement | assignmentStatement | arrayAssignmentStatement | whileStatement | returnStatement | printStatement | printlnStatement | ifElseStatement | ifStatement );", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // ul.g:68:10: SEMICOLON
                    {
                    match(input,SEMICOLON,FOLLOW_SEMICOLON_in_statement311); if (failed) return ;

                    }
                    break;
                case 2 :
                    // ul.g:69:10: expressionStatement
                    {
                    pushFollow(FOLLOW_expressionStatement_in_statement322);
                    expressionStatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 3 :
                    // ul.g:70:10: assignmentStatement
                    {
                    pushFollow(FOLLOW_assignmentStatement_in_statement333);
                    assignmentStatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 4 :
                    // ul.g:71:10: arrayAssignmentStatement
                    {
                    pushFollow(FOLLOW_arrayAssignmentStatement_in_statement344);
                    arrayAssignmentStatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 5 :
                    // ul.g:72:10: whileStatement
                    {
                    pushFollow(FOLLOW_whileStatement_in_statement355);
                    whileStatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 6 :
                    // ul.g:73:10: returnStatement
                    {
                    pushFollow(FOLLOW_returnStatement_in_statement366);
                    returnStatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 7 :
                    // ul.g:74:10: printStatement
                    {
                    pushFollow(FOLLOW_printStatement_in_statement377);
                    printStatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 8 :
                    // ul.g:75:10: printlnStatement
                    {
                    pushFollow(FOLLOW_printlnStatement_in_statement388);
                    printlnStatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 9 :
                    // ul.g:76:10: ifElseStatement
                    {
                    pushFollow(FOLLOW_ifElseStatement_in_statement399);
                    ifElseStatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;
                case 10 :
                    // ul.g:77:10: ifStatement
                    {
                    pushFollow(FOLLOW_ifStatement_in_statement410);
                    ifStatement();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;

            }
        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return ;
    }
    // $ANTLR end statement


    // $ANTLR start expressionStatement
    // ul.g:80:1: expressionStatement : expression SEMICOLON ;
    public final void expressionStatement() throws RecognitionException {
        try {
            // ul.g:81:5: ( expression SEMICOLON )
            // ul.g:81:10: expression SEMICOLON
            {
            pushFollow(FOLLOW_expression_in_expressionStatement430);
            expression();
            _fsp--;
            if (failed) return ;
            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_expressionStatement432); if (failed) return ;

            }

        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return ;
    }
    // $ANTLR end expressionStatement


    // $ANTLR start assignmentStatement
    // ul.g:84:1: assignmentStatement : identifier SINGLEEQUALS expression SEMICOLON ;
    public final void assignmentStatement() throws RecognitionException {
        try {
            // ul.g:85:5: ( identifier SINGLEEQUALS expression SEMICOLON )
            // ul.g:85:10: identifier SINGLEEQUALS expression SEMICOLON
            {
            pushFollow(FOLLOW_identifier_in_assignmentStatement452);
            identifier();
            _fsp--;
            if (failed) return ;
            match(input,SINGLEEQUALS,FOLLOW_SINGLEEQUALS_in_assignmentStatement454); if (failed) return ;
            pushFollow(FOLLOW_expression_in_assignmentStatement456);
            expression();
            _fsp--;
            if (failed) return ;
            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_assignmentStatement458); if (failed) return ;

            }

        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return ;
    }
    // $ANTLR end assignmentStatement


    // $ANTLR start arrayAssignmentStatement
    // ul.g:88:1: arrayAssignmentStatement : identifier OPENBRACKET expression CLOSEBRACKET SINGLEEQUALS expression SEMICOLON ;
    public final void arrayAssignmentStatement() throws RecognitionException {
        try {
            // ul.g:89:5: ( identifier OPENBRACKET expression CLOSEBRACKET SINGLEEQUALS expression SEMICOLON )
            // ul.g:89:10: identifier OPENBRACKET expression CLOSEBRACKET SINGLEEQUALS expression SEMICOLON
            {
            pushFollow(FOLLOW_identifier_in_arrayAssignmentStatement478);
            identifier();
            _fsp--;
            if (failed) return ;
            match(input,OPENBRACKET,FOLLOW_OPENBRACKET_in_arrayAssignmentStatement480); if (failed) return ;
            pushFollow(FOLLOW_expression_in_arrayAssignmentStatement482);
            expression();
            _fsp--;
            if (failed) return ;
            match(input,CLOSEBRACKET,FOLLOW_CLOSEBRACKET_in_arrayAssignmentStatement484); if (failed) return ;
            match(input,SINGLEEQUALS,FOLLOW_SINGLEEQUALS_in_arrayAssignmentStatement486); if (failed) return ;
            pushFollow(FOLLOW_expression_in_arrayAssignmentStatement488);
            expression();
            _fsp--;
            if (failed) return ;
            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_arrayAssignmentStatement490); if (failed) return ;

            }

        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return ;
    }
    // $ANTLR end arrayAssignmentStatement


    // $ANTLR start whileStatement
    // ul.g:92:1: whileStatement : WHILE OPENPARENTHESIS expression CLOSEPARENTHESIS block ;
    public final void whileStatement() throws RecognitionException {
        try {
            // ul.g:93:5: ( WHILE OPENPARENTHESIS expression CLOSEPARENTHESIS block )
            // ul.g:93:10: WHILE OPENPARENTHESIS expression CLOSEPARENTHESIS block
            {
            match(input,WHILE,FOLLOW_WHILE_in_whileStatement510); if (failed) return ;
            match(input,OPENPARENTHESIS,FOLLOW_OPENPARENTHESIS_in_whileStatement512); if (failed) return ;
            pushFollow(FOLLOW_expression_in_whileStatement514);
            expression();
            _fsp--;
            if (failed) return ;
            match(input,CLOSEPARENTHESIS,FOLLOW_CLOSEPARENTHESIS_in_whileStatement516); if (failed) return ;
            pushFollow(FOLLOW_block_in_whileStatement518);
            block();
            _fsp--;
            if (failed) return ;

            }

        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return ;
    }
    // $ANTLR end whileStatement


    // $ANTLR start returnStatement
    // ul.g:96:1: returnStatement : RETURN ( expression )? SEMICOLON ;
    public final void returnStatement() throws RecognitionException {
        try {
            // ul.g:97:5: ( RETURN ( expression )? SEMICOLON )
            // ul.g:97:10: RETURN ( expression )? SEMICOLON
            {
            match(input,RETURN,FOLLOW_RETURN_in_returnStatement538); if (failed) return ;
            // ul.g:97:17: ( expression )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==OPENPARENTHESIS||LA8_0==INTEGERCONSTANT||(LA8_0>=ID && LA8_0<=FALSE)) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // ul.g:0:0: expression
                    {
                    pushFollow(FOLLOW_expression_in_returnStatement540);
                    expression();
                    _fsp--;
                    if (failed) return ;

                    }
                    break;

            }

            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_returnStatement543); if (failed) return ;

            }

        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return ;
    }
    // $ANTLR end returnStatement


    // $ANTLR start printStatement
    // ul.g:100:1: printStatement : PRINT expression SEMICOLON ;
    public final void printStatement() throws RecognitionException {
        try {
            // ul.g:101:5: ( PRINT expression SEMICOLON )
            // ul.g:101:10: PRINT expression SEMICOLON
            {
            match(input,PRINT,FOLLOW_PRINT_in_printStatement563); if (failed) return ;
            pushFollow(FOLLOW_expression_in_printStatement565);
            expression();
            _fsp--;
            if (failed) return ;
            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_printStatement567); if (failed) return ;

            }

        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return ;
    }
    // $ANTLR end printStatement


    // $ANTLR start printlnStatement
    // ul.g:104:1: printlnStatement : PRINTLN expression SEMICOLON ;
    public final void printlnStatement() throws RecognitionException {
        try {
            // ul.g:105:5: ( PRINTLN expression SEMICOLON )
            // ul.g:105:10: PRINTLN expression SEMICOLON
            {
            match(input,PRINTLN,FOLLOW_PRINTLN_in_printlnStatement587); if (failed) return ;
            pushFollow(FOLLOW_expression_in_printlnStatement589);
            expression();
            _fsp--;
            if (failed) return ;
            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_printlnStatement591); if (failed) return ;

            }

        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return ;
    }
    // $ANTLR end printlnStatement


    // $ANTLR start ifElseStatement
    // ul.g:108:1: ifElseStatement : IF OPENPARENTHESIS expression CLOSEPARENTHESIS block ELSE block ;
    public final void ifElseStatement() throws RecognitionException {
        try {
            // ul.g:109:5: ( IF OPENPARENTHESIS expression CLOSEPARENTHESIS block ELSE block )
            // ul.g:109:10: IF OPENPARENTHESIS expression CLOSEPARENTHESIS block ELSE block
            {
            match(input,IF,FOLLOW_IF_in_ifElseStatement611); if (failed) return ;
            match(input,OPENPARENTHESIS,FOLLOW_OPENPARENTHESIS_in_ifElseStatement613); if (failed) return ;
            pushFollow(FOLLOW_expression_in_ifElseStatement615);
            expression();
            _fsp--;
            if (failed) return ;
            match(input,CLOSEPARENTHESIS,FOLLOW_CLOSEPARENTHESIS_in_ifElseStatement617); if (failed) return ;
            pushFollow(FOLLOW_block_in_ifElseStatement619);
            block();
            _fsp--;
            if (failed) return ;
            match(input,ELSE,FOLLOW_ELSE_in_ifElseStatement621); if (failed) return ;
            pushFollow(FOLLOW_block_in_ifElseStatement623);
            block();
            _fsp--;
            if (failed) return ;

            }

        }

            catch (RecognitionException re) {
                reportError(re);
                throw re;
            }
        finally {
        }
        return ;
    }
    // $ANTLR end ifElseStatement

